generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Category {
  id           String   @id @default(uuid())
  name         String   @unique
  description  String?
  imageUrl     String?  @map("image_url")
  displayOrder Int      @default(0) @map("display_order")
  isActive     Boolean  @default(true) @map("is_active")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")
  plats        Plat[]

  @@map("categories")
}

model Plat {
  id                String         @id @default(uuid())
  categoryId        String         @map("category_id")
  name              String
  description       String?
  price             Decimal        @db.Decimal(10, 2)
  images            String[]       @default([])
  preparationTime   Int?           @map("preparation_time")
  isAvailable       Boolean        @default(true) @map("is_available")
  isVegetarian      Boolean        @default(false) @map("is_vegetarian")
  isVegan           Boolean        @default(false) @map("is_vegan")
  isHalal           Boolean        @default(false) @map("is_halal")
  isGlutenFree      Boolean        @default(false) @map("is_gluten_free")
  spiceLevel        Int            @default(0) @map("spice_level")
  calories          Int?
  ingredients       String?
  createdAt         DateTime       @default(now()) @map("created_at")
  updatedAt         DateTime       @updatedAt @map("updated_at")
  allergens         PlatAllergen[]
  recipeItems       PlatIngredient[]
  category          Category       @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@map("plats")
}

model PlatIngredient {
  platId           String   @map("plat_id")
  ingredientId     String   @map("ingredient_id")
  quantityPerPlat  Decimal  @map("quantity_per_plat") @db.Decimal(10, 3)
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")
  plat             Plat     @relation(fields: [platId], references: [id], onDelete: Cascade)
  ingredient       Ingredient @relation(fields: [ingredientId], references: [id], onDelete: Restrict)

  @@id([platId, ingredientId])
  @@index([ingredientId])
  @@map("plat_ingredients")
}

model IngredientCategory {
  id          String        @id @default(uuid())
  name        String        @unique
  description String?
  isActive    Boolean       @default(true) @map("is_active")
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @updatedAt @map("updated_at")
  ingredients Ingredient[]

  @@map("ingredient_categories")
}

model Ingredient {
  id                String             @id @default(uuid())
  categoryId        String             @map("category_id")
  supplierId        String?            @map("supplier_id")
  name              String
  description       String?
  unit              String             @default("kg")
  quantity          Decimal            @default(0) @db.Decimal(10, 3)
  minQuantity       Decimal            @default(0) @db.Decimal(10, 3) @map("min_quantity")
  lowStockThreshold Decimal            @default(5) @db.Decimal(10, 3) @map("low_stock_threshold")
  isLowStock        Boolean            @default(false) @map("is_low_stock")
  supplier          String?
  costPerUnit       Decimal?           @map("cost_per_unit") @db.Decimal(10, 2)
  expiryDate        DateTime?          @map("expiry_date")
  storageLocation   String?            @map("storage_location")
  isActive          Boolean            @default(true) @map("is_active")
  createdAt         DateTime           @default(now()) @map("created_at")
  updatedAt         DateTime           @updatedAt @map("updated_at")
  category          IngredientCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  supplierRef       Supplier?          @relation(fields: [supplierId], references: [id], onDelete: SetNull)
  purchaseOrderLines PurchaseOrderLine[]
  recipeUsages      PlatIngredient[]
  reservationLines  IngredientReservationLine[]

  @@map("ingredients")
}

enum IngredientReservationStatus {
  RESERVED
  CONSUMED
  RELEASED
}

model IngredientReservation {
  id        String                     @id @default(uuid())
  reference String                     @unique
  reason    String?
  status    IngredientReservationStatus @default(RESERVED)
  createdAt DateTime                   @default(now()) @map("created_at")
  updatedAt DateTime                   @updatedAt @map("updated_at")
  lines     IngredientReservationLine[]

  @@index([status])
  @@map("ingredient_reservations")
}

model IngredientReservationLine {
  reservationId String                @map("reservation_id")
  ingredientId  String                @map("ingredient_id")
  quantity      Decimal               @db.Decimal(12, 3)
  reservation   IngredientReservation @relation(fields: [reservationId], references: [id], onDelete: Cascade)
  ingredient    Ingredient            @relation(fields: [ingredientId], references: [id], onDelete: Restrict)

  @@id([reservationId, ingredientId])
  @@index([ingredientId])
  @@map("ingredient_reservation_lines")
}

model Supplier {
  id          String       @id @default(uuid())
  name        String       @unique
  contactName String?      @map("contact_name")
  email       String?
  phone       String?
  address     String?
  leadTimeDays Int?        @map("lead_time_days")
  paymentTerms String?     @map("payment_terms")
  notes       String?
  isActive    Boolean      @default(true) @map("is_active")
  createdAt   DateTime     @default(now()) @map("created_at")
  updatedAt   DateTime     @updatedAt @map("updated_at")
  ingredients Ingredient[]
  purchaseOrders PurchaseOrder[]

  @@map("suppliers")
}

enum PurchaseOrderStatus {
  DRAFT
  SENT
  RECEIVED
  CANCELLED
}

model PurchaseOrder {
  id           String              @id @default(uuid())
  poNumber     String              @unique @map("po_number")
  supplierId   String              @map("supplier_id")
  status       PurchaseOrderStatus @default(DRAFT)
  expectedDate DateTime?           @map("expected_date")
  notes        String?
  subtotal     Decimal             @default(0) @db.Decimal(12, 3)
  sentAt       DateTime?           @map("sent_at")
  receivedAt   DateTime?           @map("received_at")
  createdBy    String?             @map("created_by")
  createdAt    DateTime            @default(now()) @map("created_at")
  updatedAt    DateTime            @updatedAt @map("updated_at")
  supplier     Supplier            @relation(fields: [supplierId], references: [id], onDelete: Restrict)
  lines        PurchaseOrderLine[]

  @@index([supplierId])
  @@index([status])
  @@index([createdAt])
  @@map("purchase_orders")
}

model PurchaseOrderLine {
  id              String        @id @default(uuid())
  purchaseOrderId String        @map("purchase_order_id")
  ingredientId    String        @map("ingredient_id")
  quantity        Decimal       @db.Decimal(12, 3)
  unitCost        Decimal       @map("unit_cost") @db.Decimal(12, 3)
  lineTotal       Decimal       @map("line_total") @db.Decimal(12, 3)
  createdAt       DateTime      @default(now()) @map("created_at")
  purchaseOrder   PurchaseOrder @relation(fields: [purchaseOrderId], references: [id], onDelete: Cascade)
  ingredient      Ingredient    @relation(fields: [ingredientId], references: [id], onDelete: Restrict)

  @@index([purchaseOrderId])
  @@index([ingredientId])
  @@map("purchase_order_lines")
}

enum ExpenseStatus {
  DRAFT
  APPROVED
  PAID
  REJECTED
}

model Expense {
  id            String       @id @default(uuid())
  title         String
  category      String
  amount        Decimal      @db.Decimal(12, 3)
  expenseDate   DateTime     @map("expense_date")
  supplierName  String?      @map("supplier_name")
  paymentMethod String?      @map("payment_method")
  notes         String?
  status        ExpenseStatus @default(DRAFT)
  createdBy     String?      @map("created_by")
  createdAt     DateTime     @default(now()) @map("created_at")
  updatedAt     DateTime     @updatedAt @map("updated_at")

  @@index([status])
  @@index([expenseDate])
  @@index([createdAt])
  @@map("expenses")
}

model AuditLog {
  id         String   @id @default(uuid())
  module     String
  action     String
  entityType String   @map("entity_type")
  entityId   String   @map("entity_id")
  message    String
  actorId    String?  @map("actor_id")
  metadata   Json?
  createdAt  DateTime @default(now()) @map("created_at")

  @@index([module])
  @@index([createdAt])
  @@index([entityType, entityId])
  @@map("audit_logs")
}

model Allergen {
  id    String         @id @default(uuid())
  name  String         @unique
  icon  String?
  plats PlatAllergen[]

  @@map("allergens")
}

model PlatAllergen {
  platId     String   @map("plat_id")
  allergenId String   @map("allergen_id")
  allergen   Allergen @relation(fields: [allergenId], references: [id], onDelete: Cascade)
  plat       Plat     @relation(fields: [platId], references: [id], onDelete: Cascade)

  @@id([platId, allergenId])
  @@map("plat_allergens")
}
