generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum OrderStatus {
  PENDING
  CONFIRMED
  PREPARING
  READY
  DELIVERING
  DELIVERED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  COMPLETED
  FAILED
  REFUNDED
}

enum PaymentMethod {
  CARD
  CASH
  FLOUCI
}

model Order {
  id              String      @id @default(uuid())
  userId          String      @map("user_id")
  orderNumber     String      @unique @map("order_number")
  status          OrderStatus @default(PENDING)
  subtotal        Decimal     @db.Decimal(10, 2)
  deliveryFee     Decimal     @default(0) @map("delivery_fee") @db.Decimal(10, 2)
  tax             Decimal     @default(0) @db.Decimal(10, 2)
  totalAmount     Decimal     @map("total_amount") @db.Decimal(10, 2)
  deliveryAddress Json        @map("delivery_address")
  deliveryDate    DateTime    @map("delivery_date")
  deliverySlot    String?     @map("delivery_slot")
  notes           String?
  createdAt       DateTime    @default(now()) @map("created_at")
  updatedAt       DateTime    @updatedAt @map("updated_at")

  items   OrderItem[]
  invoice Invoice?

  @@map("orders")
}

model OrderItem {
  id        String  @id @default(uuid())
  orderId   String  @map("order_id")
  platId    String  @map("plat_id")
  platName  String  @map("plat_name")
  quantity  Int
  unitPrice Decimal @map("unit_price") @db.Decimal(10, 2)
  notes     String?

  order Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@map("order_items")
}

model Invoice {
  id            String   @id @default(uuid())
  orderId       String   @unique @map("order_id")
  invoiceNumber String   @unique @map("invoice_number")
  amount        Decimal  @db.Decimal(10, 2)
  taxAmount     Decimal  @map("tax_amount") @db.Decimal(10, 2)
  pdfUrl        String?  @map("pdf_url")
  sentAt        DateTime? @map("sent_at")
  createdAt     DateTime @default(now()) @map("created_at")

  order   Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  payment Payment?

  @@map("invoices")
}

model Payment {
  id              String        @id @default(uuid())
  invoiceId       String        @unique @map("invoice_id")
  amount          Decimal       @db.Decimal(10, 2)
  method          PaymentMethod @default(CASH)
  transactionRef  String?       @map("transaction_ref")
  status          PaymentStatus @default(PENDING)
  paidAt          DateTime?     @map("paid_at")
  createdAt       DateTime      @default(now()) @map("created_at")

  invoice Invoice @relation(fields: [invoiceId], references: [id], onDelete: Cascade)

  @@map("payments")
}
