classDiagram
    direction TB

    class User {
        -id : String
        -email : String
        -role : UserRole
    }

    class Plat {
        -id : String
        -name : String
        -price : Decimal
    }

    class Order {
        -id : String
        -orderNumber : String
        -status : OrderStatus
        -subtotal : Decimal
        -deliveryFee : Decimal
        -tax : Decimal
        -totalAmount : Decimal
        -deliveryDate : DateTime
        +create(items, address) Order
        +confirm() void
        +prepare() void
        +deliver() void
        +cancel() void
        +generateInvoice() Invoice
    }

    class OrderItem {
        -id : String
        -platName : String
        -quantity : Int
        -unitPrice : Decimal
    }

    class OrderStatus {
        <<enumeration>>
        PENDING
        CONFIRMED
        PREPARING
        READY
        DELIVERING
        DELIVERED
        CANCELLED
    }

    class Invoice {
        -id : String
        -invoiceNumber : String
        -amount : Decimal
        -taxAmount : Decimal
        -pdfUrl : String
        +generatePDF() Blob
        +send() void
    }

    class Payment {
        -id : String
        -amount : Decimal
        -method : PaymentMethod
        -status : PaymentStatus
        +process() void
        +refund() void
    }

    class PaymentMethod {
        <<enumeration>>
        CARD
        CASH
        FLOUCI
    }

    class PaymentStatus {
        <<enumeration>>
        PENDING
        COMPLETED
        FAILED
        REFUNDED
    }

    class Event {
        -id : String
        -name : String
        -eventType : EventType
        -status : EventStatus
        -eventDate : DateTime
        -guestCount : Int
        -budget : Decimal
        +submitRequest() void
        +confirm() void
        +complete() void
        +cancel() void
    }

    class EventMenuItem {
        -id : String
        -platName : String
        -quantity : Int
    }

    class EventStatus {
        <<enumeration>>
        DRAFT
        PENDING_QUOTE
        QUOTE_SENT
        CONFIRMED
        COMPLETED
        CANCELLED
    }

    class Quote {
        -id : String
        -quoteNumber : String
        -status : QuoteStatus
        -totalAmount : Decimal
        -validUntil : DateTime
        +generateQuote() void
        +send() void
        +accept() void
        +reject() void
    }

    class QuoteItem {
        -id : String
        -name : String
        -quantity : Int
        -unitPrice : Decimal
        -totalPrice : Decimal
    }

    class QuoteStatus {
        <<enumeration>>
        DRAFT
        SENT
        ACCEPTED
        REJECTED
        EXPIRED
    }

    User "1" -- "*" Order : passe
    Order "1" *-- "*" OrderItem : contient
    OrderItem "*" --> "1" Plat : référence
    Order "1" *-- "0..1" Invoice : génère
    Invoice "1" *-- "0..1" Payment : reçoit
    Order --> OrderStatus : a
    Payment --> PaymentMethod : utilise
    Payment --> PaymentStatus : a

    User "1" -- "*" Event : demande
    Event "1" *-- "*" EventMenuItem : inclut
    EventMenuItem "*" --> "1" Plat : référence
    Event "1" -- "*" Quote : reçoit
    Quote "1" *-- "*" QuoteItem : détaille
    Event --> EventStatus : a
    Quote --> QuoteStatus : a
